Added mission statement

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
 	</head>
 	<body>
-		<div id="fh5co-wrapper">
+		<!-- <div id="fh5co-wrapper">
 		<div id="fh5co-page">
 		<div class="header-top">
 			<div class="container">
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
@@ -124,15 +124,29 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/Main_BG_Large.png);">
 				<div class="desc animate-box">
-					<h2><strong>Donate</strong> for the <strong>Children</strong></h2>
+					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
+          <span>A place of <strong>Peace.</strong></span>
 					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
 				</div>
 			</div>
 
 		</div>
 		<!-- end:header-top -->
+    <div id="fh5co-feature-product" class="fh5co-section-gray">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center heading-section">
+						<h3>Mission Statement.</h3>
+						<p>"At Shanti Ashram, our mission is to empower children who have been deprived of opportunities,
+              by offering them a nurturing environment that encompasses shelter, nourishment, and education.
+               We are dedicated to fostering an environment where these children can not only flourish but also harness their creative potential, 
+               ultimately finding their rightful role in our global community. As a compassionate sanctuary for children, 
+               we are fueled by a profound passion to make a lasting positive impact on their lives."
+            </p>
+					</div>
+				</div>
 		<div id="fh5co-features">
 			<div class="container">
 				<div class="row">
@@ -180,14 +194,7 @@
 			</div>
 		</div>
 
-		<div id="fh5co-feature-product" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center heading-section">
-						<h3>Giving is Virtue.</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					</div>
-				</div>
+
 
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
