--- a/public/index.html
+++ b/public/index.html
@@ -93,27 +93,27 @@
 							<li class="active">
 								<a href="index.html">Home</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="#" class="fh5co-sub-ddown">Get Involved</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">Donate</a></li>
 									<li><a href="#">Fundraise</a></li>
 									<li><a href="#">Campaign</a></li>
 									<li><a href="#">Philantrophy</a></li>
-									<li><a href="#">Volunteer</a></li>
+									<li><a href="Volunteer.html">Volunteer</a></li>
 								</ul>
-							</li>
-							<li>
+							</li> -->
+							<!-- <li>
 								<a href="#" class="fh5co-sub-ddown">Projects</a>
 								 <ul class="fh5co-sub-menu">
 								 	<li><a href="#">Water World</a></li>
 								 	<li><a href="#">Cloth Giving</a></li>
 								 	<li><a href="#">Medical Mission</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li><a href="about.html">About</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<!-- <li><a href="blog.html">Blog</a></li> -->
+							<!-- <li><a href="contact.html">Contact</a></li> -->
 						</ul>
 					</nav>
 				</div>
@@ -128,7 +128,7 @@
 				<div class="desc animate-box">
 					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
           <span>A place of <strong>Peace.</strong></span>
-					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
+					<span><a class="btn btn-primary btn-lg" href="#">Get Involved</a></span>
 				</div>
 			</div>
 
@@ -151,15 +151,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
-
 						<div class="feature-left">
 							<span class="icon">
 								<i class="icon-profile-male"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<p>Join us to make our mission of opportunity for under-privilaged kids a dream come true.</p>
+								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 
@@ -172,12 +171,12 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<p>Reach out to us to provide monetary donations to help us on our mission.</p>
+								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 
-					</div>
+					<!-- </div>
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
@@ -189,14 +188,14 @@
 								<p><a href="#">Learn More</a></p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
 
 
 
-				<div class="row row-bottom-padded-md">
+				<!-- <div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
 						<p><img src="images/cover_bg_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 					</div>
@@ -241,9 +240,9 @@
 						<h3>Our Gallery</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
 					</div>
-				</div>
+				</div> -->
 
-				
+<!-- 				
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
@@ -344,10 +343,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- fh5co-content-section -->
 
-		<div id="fh5co-services-section">
+		<!-- <div id="fh5co-services-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -402,11 +401,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- END What we do -->
 
-
+<!-- 
 		<div id="fh5co-blog-section" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
@@ -471,7 +470,7 @@
 				</div>
 
 			</div>
-		</div>
+		</div> -->
 		<!-- fh5co-blog-section -->
 		<footer>
 			<div id="footer">
@@ -485,7 +484,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Charity</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+							<p>Copyright 2016 Free Html5 <a href="#">Shanti-Ashram</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
 					</div>
 				</div>
