--- a/public/about.html
+++ b/public/about.html
@@ -66,7 +66,7 @@
 	<body>
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
-		<div class="header-top">
+		<!-- <div class="header-top">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-sm-6 text-left fh5co-link">
@@ -81,19 +81,19 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Charity</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Shanti-Ashram</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li>
 								<a href="index.html">Home</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="#" class="fh5co-sub-ddown">Get Involved</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">Donate</a></li>
@@ -110,10 +110,10 @@
 								 	<li><a href="#">Cloth Giving</a></li>
 								 	<li><a href="#">Medical Mission</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="active"><a href="about.html">About</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<!-- <li><a href="blog.html">Blog</a></li>
+							<li><a href="contact.html">Contact</a></li> -->
 						</ul>
 					</nav>
 				</div>
@@ -127,8 +127,8 @@
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_2.jpg);">
 				<div class="desc animate-box">
 					<h2>We Are <strong>Non-profit</strong></h2>
-					<span>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></span>
-					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
+					<span>Only here to serve the <strong>Kids</strong>.</span>
+					<!-- <span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span> -->
 				</div>
 			</div>
 
