--- a/public/index.html
+++ b/public/index.html
@@ -171,24 +171,24 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
-								<p>Reach out to us to provide monetary donations to help us on our mission.</p>
+								<p>Reach out to us to provide monetary support to help us on our mission, we need all the help!</p>
 								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 
-					<!-- </div>
+					</div>
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-wallet"></i>
+								<i class="icon-globe2"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Donation</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Outreach</h3>
+								<p>Help us spread the word by sharing our website and mission in social media and real life. </p>
+								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
