--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 				<div class="desc animate-box">
 					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
           <span>A place of <strong>Peace.</strong></span>
-					<span><a class="btn btn-primary btn-lg" href="#">Get Involved</a></span>
+					<span><a class="btn btn-primary btn-lg" id = "getInvolvedButton">Get Involved</a></span>
 				</div>
 			</div>
 
@@ -149,7 +149,7 @@
 				</div>
 		<div id="fh5co-features">
 			<div class="container">
-				<div class="row">
+				<div class="row" id = "involvementMethods">
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
