about page updates

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
                We are dedicated to fostering an environment where these children can not only flourish but also harness their creative potential, 
                ultimately finding their rightful role in our global community. As a compassionate sanctuary for children, 
                we are fueled by a profound passion to make a lasting positive impact on their lives."
-            </p>
+            			</p>
 					</div>
 				</div>
 		<div id="fh5co-features">
@@ -167,7 +167,7 @@
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-happy"></i>
+								<i class="icon-wallet"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
@@ -484,7 +484,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Shanti-Ashram</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+							<p>Copyright 2016 Free Html5. Enhanced <a href="#">Shanti-Ashram</a> 2023. All Rights Reserved.</p>
 						</div>
 					</div>
 				</div>
