[Hot Fix] tab menu not working on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,9 @@
 
 	</head>
 	<body>
-		<!-- <div id="fh5co-wrapper">
+	<div id="fh5co-wrapper">
 		<div id="fh5co-page">
+		<!-- 
 		<div class="header-top">
 			<div class="container">
 				<div class="row">
@@ -157,13 +158,12 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
-								<p>Join us to make our mission of opportunity for under-privilaged kids a dream come true.</p>
+								<p>Join as as we embark on a journey to full-fill our mission of providing opportunities to underprivileged kids in Nepal.</p>
 								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 
 					</div>
-
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
@@ -171,12 +171,13 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
-								<p>Reach out to us to provide monetary support to help us on our mission, we need all the help!</p>
+								<p>Your contribution, in any shape or form, matters. If you aren’t able to provide monetary support, please feel free to reach out to us via email, or phone, so we can involve in you in multiple other ways.</p>
 								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 
 					</div>
+
 					<div class="col-md-4">
 						<div class="feature-left">
 							<span class="icon">
@@ -184,11 +185,12 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Outreach</h3>
-								<p>Help us spread the word by sharing our website and mission in social media and real life. </p>
+								<p>Let’s grow, and assist each-other in making a difference in lives of children. Get involved by following our social media and sharing our mission.</p>
 								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
 					</div>
+					
 				</div>
 			</div>
 		</div>
