Donation button added with a link to test stripe

--- a/public/about.html
+++ b/public/about.html
@@ -112,6 +112,7 @@
 									</ul>
 								</li> -->
 								<li class="active"><a href="about.html">About</a></li>
+								<li><span><a href = "https://donate.stripe.com/test_fZe6pBeLkbri2v66oo" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
 								<!-- <li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li> -->
 							</ul>
