--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,7 @@
 							<li><a href="about.html">About</a></li>
 							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<!-- <li><a href="contact.html">Contact</a></li> -->
+							<li><span><a href = "https://donate.stripe.com/test_fZe6pBeLkbri2v66oo" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
 						</ul>
 					</nav>
 				</div>
