--- a/public/about.html
+++ b/public/about.html
@@ -246,7 +246,7 @@
 		
 
 		
-		<div id="fh5co-content-section" class="fh5co-section-gray">
+		<!-- <div id="fh5co-content-section" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -312,7 +312,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- fh5co-content-section -->
 
 		
