Added content, need to be restylized.

--- a/public/about.html
+++ b/public/about.html
@@ -158,19 +158,20 @@
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Love</h3>
-							<p>:/ Under Construction [Content-piece 2.1]</p>
+							<p>Building our foundation, we start everything with love.
+								 From peTeaching children to love themselves, and those whom they are surrounded with,
+								will give them a lifetime of lessons- especially to help each other in need. Honoring a natural lifestyle, we will teach children to grow their own food, living in an organic lifestyle, which involves a language of love that is able to be passed down from generations to generations. Everything starts with a vision, and this one is an impeccable one; touching lives of many. We are starting from the ground up, and you can help us take this vision- make it a physical reality. </p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Compassion</h3>
-							<p>:/ Under Construction [Content-piece 2.2]</p>
+							<h3>Structure</h3>
+							<p>Bringing forth structure, discipline, and creativity into the lives of children will help them discover their journey in life. We will use gentle ways of discipline, including creative structures based upon child’s needs, in daily routines that will assist children to develop habits that will acclimate them into confidence in their journey.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Charity</h3>
-							<p>:/ Under Construction [Content-piece 2.3]</p>
 						</div>
 					</div>
 					
