Added content for core values and reorganized layout

--- a/public/about.html
+++ b/public/about.html
@@ -135,45 +135,48 @@
 				</div>
 		
 			<div id="fh5co-feature-product" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center heading-section">
-						<h3>What we hope to achieve.</h3>
-						<p>:/ Under Construction [Content-piece 1]</p>
-					</div>
-				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 text-center animate-box heading-section">
+							<h3>Core <strong>Values</strong></h3>
+							<div class="row text-center">
+							<div class="col-md-4">
+								<div class="feature-text">
+									<h3>Structure</h3>
+									<p>Bringing forth structure, discipline, and creativity into the lives of children will help them discover their journey in life. We will use gentle ways of discipline, including creative structures based upon child’s needs, in daily routines that will assist children to develop habits that will acclimate them into confidence in their journey.</p>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="feature-text">
+									<h3>Love</h3>
+									<p>Empowering children through love, we instill structure, discipline, and creativity into their lives, nurturing their unique paths. Our gentle guidance, tailored to each child's needs, cultivates daily routines that foster self-assuredness, ensuring they embark on their life journey with confidence. </p>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="feature-text">
+									<h3>Charity</h3>
+									<p>As a charitable organization, we are driven by the compassion of our sponsors, donors, and board members, who wholeheartedly serve our cause. Our primary mission is to make a profound impact on the lives of Nepal's children, offering them a place to call home. Join us in this selfless act of providing assistance, dedicated solely to improving the lives of Nepal's children.</p>
+								</div>
+							</div>
+							</div>
+						</div>
 
-				<div class="row row-bottom-padded-md">
-					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
-					</div>
-					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-						<h3>Core <strong>Values</strong></h3>
-					</div>
-					<div class="col-md-4">
-						<div class="feature-text">
-							<h3>Love</h3>
-							<p>Building our foundation, we start everything with love.
-								 From peTeaching children to love themselves, and those whom they are surrounded with,
-								will give them a lifetime of lessons- especially to help each other in need. Honoring a natural lifestyle, we will teach children to grow their own food, living in an organic lifestyle, which involves a language of love that is able to be passed down from generations to generations. Everything starts with a vision, and this one is an impeccable one; touching lives of many. We are starting from the ground up, and you can help us take this vision- make it a physical reality. </p>
+					<div class="row row-bottom-padded-md">
+						<div class="col-md-6 text-center animate-box">
+							<p><img src="images/cover_bg_2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						</div>
+						<div class="col-md-6 text-center animate-box">
+							<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="feature-text">
-							<h3>Structure</h3>
-							<p>Bringing forth structure, discipline, and creativity into the lives of children will help them discover their journey in life. We will use gentle ways of discipline, including creative structures based upon child’s needs, in daily routines that will assist children to develop habits that will acclimate them into confidence in their journey.</p>
+
+					<div class="row">
+						<div class="col-md-12 text-center heading-section">
+							<h3>What we hope to achieve.</h3>
+							<p>:/ Under Construction [Content-piece 1]</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="feature-text">
-							<h3>Charity</h3>
-						</div>
-					</div>
+					
 					
 				</div>
 
