about page complete

--- a/public/about.html
+++ b/public/about.html
@@ -112,7 +112,7 @@
 									</ul>
 								</li> -->
 								<li class="active"><a href="about.html">About</a></li>
-								<li><span><a href = "https://donate.stripe.com/test_fZe6pBeLkbri2v66oo" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
+								<li><span><a href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
 								<!-- <li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li> -->
 							</ul>
@@ -163,17 +163,18 @@
 
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-6 text-center animate-box">
-							<p><img src="images/cover_bg_2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+							<p><img src="images/about_left_support_2.jpg" class="img-responsive"></p>
 						</div>
 						<div class="col-md-6 text-center animate-box">
-							<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+							<p><img src="images/about_right_support_2.jpg"  class="img-responsive" height="153" width="auto"></p>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-12 text-center heading-section">
 							<h3>What we hope to achieve.</h3>
-							<p>:/ Under Construction [Content-piece 1]</p>
+							<p>We are a diverse group of dedicated individuals committed 
+								to building an ashram/orphanage in Nepal, South Asia. The team will be focusing on fundraising, collaborating with businesses, and spreading awareness until November 2024. We are committed to do our best to develop our vision of empowering children through shelter, nourishment, and education. Your invaluable support and generous contributions in its entirety will be used to enhance the overall wellbeing of the children of the Shanti Ashram in Nepal.</p>
 						</div>
 					</div>
 					
