--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 							<li><a href="about.html">About</a></li>
 							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<!-- <li><a href="contact.html">Contact</a></li> -->
-							<li><span><a href = "https://donate.stripe.com/test_fZe6pBeLkbri2v66oo" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
+							<li><span><a href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
 						</ul>
 					</nav>
 				</div>
@@ -472,7 +472,6 @@
 					</div>
 				</div>
 
-			</div>
 		</div> -->
 		<!-- fh5co-blog-section -->
 		<footer>
