new layount for md-col

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
     <div id="fh5co-feature-product" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12 text-center heading-section">
+					<div class="col-md-10 col-md-offset-1 text-center heading-section">
 						<h3>Mission Statement.</h3>
 						<p>"At Shanti Ashram, our mission is to empower children who have been deprived of opportunities,
               by offering them a nurturing environment that encompasses shelter, nourishment, and education.
@@ -159,7 +159,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
-								<p>Join as as we embark on a journey to full-fill our mission of providing opportunities to underprivileged kids in Nepal.</p>
+								<p>Join as as we embark on a journey to full-fill our mission of providing opportunities to underprivileged kids in Nepal. We appreciate any assistance you can provide us on our mission.</p>
 								<p><a href="about.html">Learn More</a></p>
 							</div>
 						</div>
