--- a/public/about.html
+++ b/public/about.html
@@ -179,7 +179,7 @@
 					</div>
 					<div id="fh5co-contact" class="animate-box">
 						<div class="container">
-							<form action="#">
+							<form action="https://script.google.com/macros/s/AKfycbyYx5lvqJc_i3cpcDbzZuziSfuIAhpbXdJuVmZ73wpw/dev" method="post" >
 								<div class="row">
 									<div class="col-md-6">
 										<h3 class="section-title">Contact Us</h3>
@@ -195,17 +195,17 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
-													<input type="text" class="form-control" placeholder="Name">
+													<input type="text" class="form-control" placeholder="Name" name = "name">
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
-													<input type="text" class="form-control" placeholder="Email">
+													<input type="text" class="form-control" placeholder="Email" name = "email">
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
-													<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+													<textarea name="Message" class="form-control" id="" cols="30" rows="7" placeholder="message"></textarea>
 												</div>
 											</div>
 											<div class="col-md-12">
