changed buttons and addded smooth scrolling

--- a/public/about.html
+++ b/public/about.html
@@ -128,7 +128,7 @@
 					<div class="desc animate-box">
 						<h2>We Are <strong>Non-profit</strong></h2>
 						<span>Only here to serve the <strong>Kids</strong>.</span>
-						<!-- <span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span> -->
+						<span><a class="btn btn-primary btn-lg" id = "contactUsButton">Contact Us</a></span>
 					</div>
 				</div>
 
