--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 							<li><a href="about.html">About</a></li>
 							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<!-- <li><a href="contact.html">Contact</a></li> -->
-							<li><span><a href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li>
+							<!-- <li><span><a href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li> -->
 						</ul>
 					</nav>
 				</div>
@@ -130,7 +130,7 @@
 				<div class="desc animate-box">
 					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
           <span>A place of <strong>Peace.</strong></span>
-					<span><a class="btn btn-primary btn-lg" id = "getInvolvedButton">Get Involved</a></span>
+					<span><a class="btn btn-primary btn-lg" href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Donate Now</a></span>
 				</div>
 			</div>
 
@@ -160,7 +160,7 @@
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
 								<p>Join as as we embark on a journey to full-fill our mission of providing opportunities to underprivileged kids in Nepal. We appreciate any assistance you can provide us on our mission.</p>
-								<p><a href="about.html">Learn More</a></p>
+								<p><a href="about.html#fh5co-contact">Learn More</a></p>
 							</div>
 						</div>
 
@@ -173,7 +173,7 @@
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
 								<p>Your contribution, in any shape or form, matters. If you aren’t able to provide monetary support, please feel free to reach out to us via email, or phone, so we can involve in you in multiple other ways.</p>
-								<p><a href="about.html">Learn More</a></p>
+								<p><a href="https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Learn More</a></p>
 							</div>
 						</div>
 
