--- a/public/about.html
+++ b/public/about.html
@@ -7,11 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shanti Ashram &mdash; about</title>
+	<title>About | Shanti-Ashram</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Free HTML5 Template, Enhanced by Shanti Ashram Nepal" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -179,7 +177,7 @@
 					</div>
 					<div id="fh5co-contact" class="animate-box">
 						<div class="container">
-							<form action="https://script.google.com/macros/s/AKfycbyYx5lvqJc_i3cpcDbzZuziSfuIAhpbXdJuVmZ73wpw/dev" method="post" >
+							<form name = "contact-us-form">
 								<div class="row">
 									<div class="col-md-6">
 										<h3 class="section-title">Contact Us</h3>
@@ -210,7 +208,7 @@
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
-													<input type="submit" value="Send Message" class="btn btn-primary">
+													<button id ='contact-form-submit-btn' type="submit" value="Send Message" class="btn btn-primary">
 												</div>
 											</div>
 										</div>
