JS implementated, need to test on prod

--- a/public/about.html
+++ b/public/about.html
@@ -208,7 +208,7 @@
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
-													<button id ='contact-form-submit-btn' type="submit" value="Send Message" class="btn btn-primary">
+													<input id ='contact-form-submit-btn' type="submit" value="Send Message" class="btn btn-primary">
 												</div>
 											</div>
 										</div>
