--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,12 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Shanti Ashram</a></h1>
+					<h1 id="fh5co-logo">
+						<a href="index.html">
+							<img src="images/Shanti_Ashram_logo.png" alt="Shanti Ashram Logo" width = "50" style="margin-top: -10px;">
+							Shanti Ashram 
+						</a>
+					</h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
