Commenting out contact us

--- a/public/about.html
+++ b/public/about.html
@@ -175,7 +175,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="fh5co-contact" class="animate-box">
+					<!-- <div id="fh5co-contact" class="animate-box">
 						<div class="container">
 							<form name = "contact-us-form">
 								<div class="row">
@@ -184,7 +184,7 @@
 										<p>Please contact us with any questions, to get involved, or any other concerns.</p>
 										<ul class="contact-info">
 											<li><i class="icon-location-pin"></i>Greater Columbus Area, USA</li>
-											<!-- <li><i class="icon-phone2"></i></li> -->
+											<li><i class="icon-phone2"></i></li>
 											<li><i class="icon-mail"></i><a href="#">shantiashramtech@gmail.com</a></li>
 											<li><i class="icon-globe2"></i><a href="#">www.shantiashramnepal.web.app</a></li>
 										</ul>
@@ -216,7 +216,7 @@
 								</div>
 							</form>
 						</div>
-					</div>
+					</div> -->
 
 				
 			
