--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Home | Shanti-Ashram</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="images/site.webmanifest">
+	<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -118,6 +125,7 @@
 								</ul>
 							</li> -->
 							<li><a href="about.html">About</a></li>
+							<li><a href="volunteer.html">Volunteer</a></li>
 							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<!-- <li><a href="contact.html">Contact</a></li> -->
 							<!-- <li><span><a href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg">Donate</a></span></li> -->
