--- a/public/index.html
+++ b/public/index.html
@@ -145,12 +145,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center heading-section">
-						<h3>Mission Statement.</h3>
-						<p>"At Shanti Ashram, our mission is to empower children who have been deprived of opportunities,
-              by offering them a nurturing environment that encompasses shelter, nourishment, and education.
-               We are dedicated to fostering an environment where these children can not only flourish but also harness their creative potential, 
-               ultimately finding their rightful role in our global community. As a compassionate sanctuary for children, 
-               we are fueled by a profound passion to make a lasting positive impact on their lives."
+						<h3>Mission Statement</h3>
+						<p>At Shanti Ashram, our mission is to empower children who have been deprived of basic needs of life, by offering them a nurturing environment that encompasses shelter, nourishment, and education. We are dedicated to fostering an environment where these children not only flourish, but also harness their creative potential by finding their rightful role in our global community. As a compassionate sanctuary for children, we are fueled by a profound passion to make a lasting positive impact on their lives.
             			</p>
 					</div>
 				</div>
@@ -164,8 +160,8 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
-								<p>Join as as we embark on a journey to full-fill our mission of providing opportunities to underprivileged kids in Nepal. We appreciate any assistance you can provide us on our mission.</p>
-								<p><a href="about.html#fh5co-contact">Learn More</a></p>
+								<p>Join us as we embark on a journey to fulfill our mission of providing support to the underprivileged children in Nepal. We appreciate any assistance you can provide us on our mission.</p>
+								<!-- <p><a href="about.html#fh5co-contact">Learn More</a></p> -->
 							</div>
 						</div>
 
@@ -177,8 +173,8 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
-								<p>Your contribution, in any shape or form, matters. If you aren’t able to provide monetary support, please feel free to reach out to us via email, or phone, so we can involve in you in multiple other ways.</p>
-								<p><a href="https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Learn More</a></p>
+								<p>Let’s grow and assist each other in making a difference in the lives of children. Get involved by following our social media accounts and sharing our mission.</p>
+								<!-- <p><a href="https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Learn More</a></p> -->
 							</div>
 						</div>
 
@@ -192,7 +188,7 @@
 							<div class="feature-copy">
 								<h3>Outreach</h3>
 								<p>Let’s grow, and assist each-other in making a difference in lives of children. Get involved by following our social media and sharing our mission.</p>
-								<p><a href="about.html">Learn More</a></p>
+								<!-- <p><a href="about.html">Learn More</a></p> -->
 							</div>
 						</div>
 					</div>
