--- a/public/about.html
+++ b/public/about.html
@@ -130,7 +130,7 @@
 				<div class="fh5co-overlay"></div>
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/about_main_bg_lg.jpg);">
 					<div class="desc animate-box">
-						<h2>We Are <strong>Non-profit</strong></h2>
+						<h2>We Are <strong>nonprofit</strong> organization</h2>
 						<span>Dedicted to helping <strong>children</strong> in Nepal</span>
 						<!-- <span><a class="btn btn-primary btn-lg" id = "contactUsButton">Contact Us</a></span> -->
 					</div>
@@ -143,7 +143,7 @@
 					
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 text-center heading-section">
-							<h3>Who We Are.</h3>
+							<h3>Our Story</h3>
 							<p>We are a diverse group of dedicated individuals committed 
 								to building an ashram/orphanage in Nepal, South Asia. The team will be focusing on fundraising, collaborating with businesses, and spreading awareness until November 2024. We are committed to do our best to develop our vision of empowering children through shelter, nourishment, and education. Your invaluable support and generous contributions in its entirety will be used to enhance the overall wellbeing of the children of the Shanti Ashram in Nepal.</p>
 						</div>
