--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/Main_BG_Large.png);">
 				<div class="desc animate-box">
 					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
-          <span>A place of <strong>Peace.</strong></span>
+          <span>A place of <strong>Peace</strong></span>
 					<span><a class="btn btn-primary btn-lg" href = "https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Donate Now</a></span>
 				</div>
 			</div>
@@ -173,7 +173,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Happy Giving</h3>
-								<p>Let’s grow and assist each other in making a difference in the lives of children. Get involved by following our social media accounts and sharing our mission.</p>
+								<p>Your contribution in any shape or form matters. If you are unable to support monetarily, please contact us via email or phone to get involved in other ways.</p>
 								<!-- <p><a href="https://www.gofundme.com/f/shanti-ashram?utm_medium=copy_link&utm_source=customer&utm_campaign=p_cp_guide_do&member=29498013">Learn More</a></p> -->
 							</div>
 						</div>
