--- a/public/about.html
+++ b/public/about.html
@@ -37,7 +37,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/Shanti_Ashram_logo.png">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 	
@@ -130,7 +130,7 @@
 				<div class="fh5co-overlay"></div>
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/about_main_bg_lg.jpg);">
 					<div class="desc animate-box">
-						<h2>We Are <strong>nonprofit</strong> organization</h2>
+						<h2>We Are a<strong>nonprofit</strong> organization</h2>
 						<span>Dedicted to helping <strong>children</strong> in Nepal</span>
 						<!-- <span><a class="btn btn-primary btn-lg" id = "contactUsButton">Contact Us</a></span> -->
 					</div>
