--- a/public/about.html
+++ b/public/about.html
@@ -131,7 +131,7 @@
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/about_main_bg_lg.jpg);">
 					<div class="desc animate-box">
 						<h2>We Are a <strong>nonprofit</strong> organization</h2>
-						<span>Dedicted to helping <strong>children</strong> in Nepal</span>
+						<span>Dedicated to helping <strong>children</strong> in Nepal</span>
 						<!-- <span><a class="btn btn-primary btn-lg" id = "contactUsButton">Contact Us</a></span> -->
 					</div>
 				</div>
