--- a/public/about.html
+++ b/public/about.html
@@ -146,12 +146,13 @@
 					</div>
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-6 center animate-box">
-							<p><img src="images/about_left_support_2.jpg" class="img-responsive"></p>
+							<p><img src="images/about_left_support_2.jpg" class="img-responsive" style="width: auto; height: 300px;"></p>
 						</div>
 						<div class="col-md-6 text-center animate-box">
-							<p><img src="images/about_right_support_2.jpg"  class="img-responsive" height="153" width="auto"></p>
+							<p><img src="images/about_right_support_2.jpg" class="img-responsive" style="width: 450px; height: 300px;"></p>
 						</div>
 					</div>
+					
 					<div class="row">
 						<div class="col-lg-12 text-center animate-box heading-section">
 							<h3>Core <strong>Values</strong></h3>
