update about page main background

--- a/public/about.html
+++ b/public/about.html
@@ -131,7 +131,7 @@
 
 				<div class="fh5co-hero">
 				<div class="fh5co-overlay"></div>
-				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/about_main_bg.jpeg);">
+				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/about_main_bg.png);">
 					<div class="desc animate-box">
 						<h2>We Are a <strong>nonprofit</strong> organization</h2>
 						<span>Dedicated to helping <strong>children</strong> in Nepal</span>
