--- a/public/volunteer.html
+++ b/public/volunteer.html
@@ -113,7 +113,7 @@
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/volunteer_cover_image.png);">
 				<div class="desc animate-box">
-					<h2><strong>Become A Volunteer</strong></h2>
+					<h2>Become A <strong>Volunteer</strong></h2>
 					<span>Your Time, Their Smiles: Get Involved Today</span>
 					<span><a class="btn btn-primary btn-lg" href="#">Volunteer Today</a></span>
 				</div>
