modified bg photos

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/Main_BG_Large.png);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/home_main_bg.jpeg);">
 				<div class="desc animate-box">
 					<h2><strong>Shanti</strong> for the <strong>Children</strong></h2>
           <span>A place of <strong>Peace</strong></span>
